# mercati-energetici

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  tests.yml
LICENSE/: index.html
docs/: getting_started.md  index.md  installation.md
docs/reference/: mercati_energetici.md
docs/stylesheets/: extra.css
examples/: get_daily_pun.py
getting_started/: index.html
installation/: index.html
mercati_energetici/: __init__.py  authenticated_markets.py  electricity_markets.py  environmental_markets.py  exceptions.py  gas_markets.py
reference/mercati_ambientali/: index.html
reference/mercati_elettrici/: index.html
reference/mercati_energetici/: index.html
reference/mercati_gas/: index.html
reference/mgp/: index.html
search/: search_index.json
tests/: conftest.py  test_electricy_markets.py  test_energy_markets.py  test_environmental_markets.py  test_gas_markets.py
